--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,13 +22,236 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="loading">
+    <div class="load">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="60 60 130 130" fill="currentColor">
+        <path
+          d="M74.9,125.1h100.4c1.5-0.3,12.2-2.9,12.2-14.7c0-13.6-13.2-36.6-62.3-36.6c-49.1,0-62.5,23-62.5,36.6   C62.7,122.2,73.4,124.8,74.9,125.1z" />
+        <path
+          d="M178.4,128.7H71.7c-5,0-8.9,3.9-8.9,8.9s4,8.9,8.9,8.9h106.7c5,0,8.9-3.9,8.9-8.9S183.4,128.7,178.4,128.7z" />
+        <path
+          d="M178,150.2h-56c-3.3,0-6.4,1.3-8.7,3.6l-12.1,12c-1.2,1.2-3.2,1.2-4.5,0l-12.1-12c-2.3-2.3-5.4-3.6-8.7-3.6h-4.5 c-2.5,0-4.8,1.2-6.3,3.1c-2.1,2.8-2.9,6.1-2.8,9.6c0.6,7.6,7.2,13.4,15,13.4h94.7c7.8,0,14.4-5.8,15-13.4c0.3-3.4-0.7-6.9-2.8-9.6 C182.9,151.3,180.5,150.2,178,150.2z" />
+      </svg>
+      <div id="loading-bar">
+        <div></div>
+      </div>
+    </div>
+    <div class="go-full">
+      <div class="main">
+        <!-- <svg viewBox="-10.5 -120 1024 1024" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+          <path d="M888.063,521h-773.5V29c0-16.016,12.984-29,29-29h715.5c16.017,0,29,12.984,29,29V521z"
+            fill="#020202" />
+          <rect fill="#524D61" height="434" width="689" x="156.813" y="44" />
+          <rect fill="#C3C4C6" height="32.5" width="1006.5" y="521.5" />
+          <path d="M575.5,527.75c0,4.971-4.029,9-9,9h-136c-4.971,0-9-4.029-9-9V521h154V527.75z" fill="#909091" />
+          <path d="M1.833,552.667c0,0,10.667,19.333,72,18l844-0.333c0,0,63.998,0.999,85.331-17.667H1.833z"
+            fill="#6F6F6F" />
+        </svg> -->
+        <div>
+          <h1>Before entering my portfolio</h1>
+          <p>
+            Get the best experience from my portfolio by going full screen.
+          </p>
+          <p>
+            Most of your keyboard shortcuts will be disabled, but you can press Esc at anytime to exit full screen.
+          </p>
+        </div>
+      </div>
+      <div class="actions">
+        <!-- Maybe the "hint" button here -->
+        <div class="buttons">
+          <button id="skip">Skip</button>
+          <button id="enable">Enable</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="root"></div>
+  <style>
+    body {
+      background-color: black;
+    }
+
+    #loading {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+
+    #loading .load {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #loading.second-stage .load {
+      display: none;
+    }
+
+    #loading:not(.second-stage) .go-full {
+      display: none;
+    }
+
+    #loading .load svg {
+      width: 80px;
+      aspect-ratio: 1;
+      color: white;
+      margin-bottom: 56px;
+    }
+
+    #loading #loading-bar {
+      width: 220px;
+      height: 6px;
+      border: 1px solid #2b2c2b;
+      background-color: #242524;
+      box-shadow: 0px 0px 2px #1c1c1c;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    #loading #loading-bar div {
+      height: 6px;
+      border-top-left-radius: 8px;
+      border-bottom-left-radius: 8px;
+      background-color: #cdcccc;
+      width: 10px;
+    }
+
+    #loading .go-full {
+      border: 1px solid #636363;
+      outline: 1px solid #2c2c2c;
+      background-color: #2c2c2c;
+      color: white;
+      font-family: "Roboto", sans-serif;
+      padding: 24px;
+      box-sizing: border-box;
+      width: 600px;
+      max-width: calc(100vw - 440px);
+      border-radius: 12px;
+      box-shadow: -30px 20px 40px rgba(200, 200, 200, 0.08),
+        30px 20px 40px rgba(200, 200, 200, 0.08);
+    }
+
+    #loading .go-full .main {
+      margin-bottom: 20px;
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+    }
+
+    #loading .go-full .main svg {
+      height: 120px;
+      aspect-ratio: 1;
+      flex-shrink: 0;
+    }
+
+    #loading .go-full .main h1 {
+      font-size: 18px;
+      font-weight: 500;
+      margin: 0 0 10px;
+    }
+
+    #loading .go-full .main p {
+      margin: 0;
+      font-size: 16px;
+      font-weight: 400;
+    }
+    #loading .go-full .main p:not(:last-child) {
+      margin-bottom: 6px;
+    }
+    #loading .go-full .actions {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+
+    #loading .go-full .actions .buttons {
+      display: flex;
+      gap: 12px
+    }
+
+    #loading .go-full .actions .buttons button {
+      height: 28px;
+      /*background-color: #1e76d5;*/
+      background: linear-gradient(#2884e7, #196ec9);
+      color: white;
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      border: none;
+      outline: none;
+      border-radius: 5px;
+      min-width: 100px;
+      padding: 2px 10px;
+      box-shadow: 0px 1px inset rgba(255, 255, 255, 0.2), 0px -1px inset rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+    }
+
+    #loading .go-full .actions .buttons button#skip {
+      background: #696969;
+    }
+  </style>
+  <script type="application/javascript">
+    console.time('load');
+    const start = Date.now()
+    const reqFrame =
+      window.requestAnimationFrame ||
+      window.webkitRequestAnimationFrame ||
+      window.mozRequestAnimationFrame;
+    function sigmoid(x) {
+      return 1 / (1 + Math.exp(-2 * x + 3))
+    }
+    const loading_screen = document.getElementById('loading')
+    const loading_bar = document.querySelector('#loading-bar > div')
+    window.app_start = new Promise(resolve => {
+      function updateLoadingBar() {
+        // Fake load for approx 10 seconds
+        const percent = Math.ceil(sigmoid((Date.now() - start) / 2_700) * 100)
+        loading_bar.style.width = Math.min(percent, 100) + '%'
+        if (!window.app_ready && percent < 100) reqFrame(updateLoadingBar)
+        else resolve()
+      }
+      updateLoadingBar()
+    }).then(res => {
+      console.timeEnd('load')
+      window.app_ready = Date.now() - start
+      loading_screen.classList.add('second-stage')
+      let end_second_stage;
+      return new Promise(resolve => {
+        const skip_button = document.getElementById('skip')
+        const enable_button = document.getElementById('enable')
+        skip_button.onclick = resolve
+        enable_button.onclick = function go_full_screen() {
+          if (!document.fullscreenElement) {
+            (
+              document.documentElement.requestFullscreen ||
+              document.documentElement.webkitRequestFullscreen ||
+              document.documentElement.mozRequestFullScreen
+            ).bind(document.documentElement)().then(resolve);
+          } else resolve()
+        }
+      })
+    }).then(() => {
+      // Remove loading screen from the dom once the react app is ready
+      loading_screen.remove()
+      return true
+    })
+
+  </script>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -40,5 +261,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
